# parking-permit

./: .gitignore  README.md  pyproject.toml  test_parking_permit.py
parking_permit/: __init__.py  __main__.py  agent.py  html_parser.py  mail_service.py  parking_permit.py  queue_service.py
scripts/: format.sh  run.sh  test.sh
tests/: conftest.py  html_response.txt  test_agent.py  test_email_service.py  test_html_parser.py  test_parking_permit.py  test_queue_service.py
uml/: agent.puml
