[tool.poetry]
name = "parking-permit"
version = "0.1.0"
description = "Monitor changes in parket permit queue"
authors = ["janheindejong <janhein.dejong@gmail.com>"]
packages = [{include = "parking_permit"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
mypy = "^0.930"
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest = "^6.2.5"
autoflake = "^1.4"
types-requests = "^2.26.2"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
